[feat] task 2: LeNet-5

--- a/lab09.ipynb
+++ b/lab09.ipynb
@@ -28,6 +28,240 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## LeNet-5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras import datasets, layers, models\n",
+    "from tensorflow.keras.utils import to_categorical\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
+      "\u001b[1m11490434/11490434\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 0us/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cargar el dataset MNIST\n",
+    "(x_train, y_train), (x_test, y_test) = datasets.mnist.load_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Normalización de los datos\n",
+    "x_train, x_test = x_train / 255.0, x_test / 255.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Redimensionar para añadir el canal (grayscale) necesario para LeNet-5\n",
+    "x_train = x_train.reshape(-1, 28, 28, 1)\n",
+    "x_test = x_test.reshape(-1, 28, 28, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convertir etiquetas a one-hot encoding\n",
+    "y_train = to_categorical(y_train)\n",
+    "y_test = to_categorical(y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Definir la arquitectura LeNet-5\n",
+    "model = models.Sequential([\n",
+    "    layers.Conv2D(6, kernel_size=(5, 5), activation='tanh', input_shape=(28, 28, 1)),\n",
+    "    layers.AveragePooling2D(pool_size=(2, 2)),\n",
+    "    layers.Conv2D(16, kernel_size=(5, 5), activation='tanh'),\n",
+    "    layers.AveragePooling2D(pool_size=(2, 2)),\n",
+    "    layers.Conv2D(120, kernel_size=(5, 5), activation='tanh', padding='same'),  # Ajuste del padding\n",
+    "    layers.Flatten(),\n",
+    "    layers.Dense(84, activation='tanh'),\n",
+    "    layers.Dense(10, activation='softmax')\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compilar el modelo\n",
+    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m16s\u001b[0m 14ms/step - accuracy: 0.8764 - loss: 0.4316 - val_accuracy: 0.9508 - val_loss: 0.1714\n",
+      "Epoch 2/10\n",
+      "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m16s\u001b[0m 17ms/step - accuracy: 0.9522 - loss: 0.1604 - val_accuracy: 0.9617 - val_loss: 0.1227\n",
+      "Epoch 3/10\n",
+      "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 12ms/step - accuracy: 0.9675 - loss: 0.1052 - val_accuracy: 0.9743 - val_loss: 0.0841\n",
+      "Epoch 4/10\n",
+      "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m15s\u001b[0m 16ms/step - accuracy: 0.9743 - loss: 0.0826 - val_accuracy: 0.9797 - val_loss: 0.0660\n",
+      "Epoch 5/10\n",
+      "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 13ms/step - accuracy: 0.9782 - loss: 0.0709 - val_accuracy: 0.9789 - val_loss: 0.0686\n",
+      "Epoch 6/10\n",
+      "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m21s\u001b[0m 14ms/step - accuracy: 0.9827 - loss: 0.0577 - val_accuracy: 0.9792 - val_loss: 0.0669\n",
+      "Epoch 7/10\n",
+      "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m15s\u001b[0m 16ms/step - accuracy: 0.9820 - loss: 0.0559 - val_accuracy: 0.9822 - val_loss: 0.0559\n",
+      "Epoch 8/10\n",
+      "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m14s\u001b[0m 14ms/step - accuracy: 0.9842 - loss: 0.0527 - val_accuracy: 0.9824 - val_loss: 0.0554\n",
+      "Epoch 9/10\n",
+      "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 13ms/step - accuracy: 0.9862 - loss: 0.0452 - val_accuracy: 0.9809 - val_loss: 0.0570\n",
+      "Epoch 10/10\n",
+      "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 12ms/step - accuracy: 0.9847 - loss: 0.0488 - val_accuracy: 0.9819 - val_loss: 0.0560\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Entrenar el modelo\n",
+    "history = model.fit(x_train, y_train, epochs=10, batch_size=64, validation_data=(x_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 5ms/step - accuracy: 0.9772 - loss: 0.0673\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluar el modelo en el conjunto de prueba\n",
+    "test_loss, test_acc = model.evaluate(x_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test accuracy: 0.9818999767303467\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Test accuracy: {test_acc}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Justificación de Métrica de Desempeño seleccionada\n",
+    "* Precisión (Accuracy): La métrica más adecuada para un problema de clasificación como el dataset MNIST es la precisión. La precisión mide el porcentaje de predicciones correctas sobre el total de ejemplos. En el caso de MNIST, estamos clasificando imágenes de dígitos escritos a mano en 10 clases (0-9), por lo que la precisión nos indicará qué tan bien el modelo clasifica correctamente cada imagen en la clase correspondiente.\n",
+    "* Nuestro modelo LeNet-5 entrenado sobre el dataset MNIST alcanzó una precisión de prueba del 98.19%, lo que indica que el modelo es capaz de clasificar correctamente la gran mayoría de los dígitos escritos a mano. Esta alta precisión refleja el buen desempeño de la arquitectura para resolver tareas de reconocimiento de dígitos, confirmando su efectividad en problemas de clasificación de imágenes simples como MNIST."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## AlexNet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Justificación de Métrica de Desempeño seleccionada\n",
+    "* Lorem Ipsum"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preguntas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### a. ¿Cuál es la diferencia principal entre ambas arquitecturas?\n",
+    "* La diferencia principal entre LeNet-5 y AlexNet radica en la complejidad y escala de ambas arquitecturas. LeNet-5 fue pensado para la clasificación de imágenes simples como dígitos escritos a mano (MNIST), por lo que tiene una estructura más pequeña y con menos capas , lo que lo hace ideal para problemas menos complejos. Por otro lado, AlexNet fue diseñado para problemas más complejos como la clasificación en el dataset ImageNet, que contiene millones de imágenes de alta resolución y múltiples categorías, por lo cual tiene muchas más capas y utiliza técnicas modernas como la activación ReLU y Dropout para evitar el sobreajuste, además de aprovechar la computación en GPU para manejar grandes volúmenes de datos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### b. ¿Podría usarse LeNet-5 para un problema como el que resolvió usando AlexNet? ¿Y viceversa?\n",
+    "* LeNet-5 no sería adecuado para resolver un problema de la escala de AlexNet, como el dataset CIFAR-10, que tiene imágenes de objetos más complejos y variados. Esto se debe a que LeNet-5 fue diseñado para imágenes en escala de grises y de baja resolución (28x28 píxeles), y su arquitectura no es lo suficientemente profunda para extraer las características complejas necesarias en tareas de clasificación de imágenes a gran escala. \n",
+    "* Por otro lado, AlexNet sí podría usarse para resolver problemas que originalmente resolvía LeNet-5, como el reconocimiento de dígitos, pero sería una solución excesivamente compleja. La profundidad y capacidad de AlexNet serían innecesarias para un problema tan sencillo, lo que resultaría en un modelo más grande y costoso en términos computacionales sin una mejora sustancial en el rendimiento. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### c. Indique claramente qué le pareció más interesante de cada arquitectura\n",
+    "* **LeNet-5**: Lo más interesante es su simplicidad y eficacia para problemas de clasificación de imágenes pequeñas y de baja complejidad, como los dígitos escritos a mano. Al investigar se encontró que fue una arquitectura pionera en el uso de redes convolucionales, mostrando cómo las capas convolucionales y de pooling podían reducir la dimensionalidad y captar características relevantes para tareas de clasificación.\n",
+    "* **AlexNet**:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Task 2"
    ]
   },
