--- a/lab09.ipynb
+++ b/lab09.ipynb
@@ -39,6 +39,7 @@
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow.keras import datasets, layers, models\n",
+    "from tensorflow.keras.datasets import cifar10\n",
     "from tensorflow.keras.utils import to_categorical\n"
    ]
   },
@@ -46,16 +47,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/mnist.npz\n",
-      "\u001b[1m11490434/11490434\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 0us/step\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Cargar el dataset MNIST\n",
     "(x_train, y_train), (x_test, y_test) = datasets.mnist.load_data()"
@@ -95,9 +87,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Mendez\\Desktop\\U\\DL\\.venv\\Lib\\site-packages\\keras\\src\\layers\\convolutional\\base_conv.py:107: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+     ]
+    }
+   ],
    "source": [
     "# Definir la arquitectura LeNet-5\n",
     "model = models.Sequential([\n",
@@ -114,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -132,25 +133,25 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m16s\u001b[0m 14ms/step - accuracy: 0.8764 - loss: 0.4316 - val_accuracy: 0.9508 - val_loss: 0.1714\n",
+      "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m13s\u001b[0m 11ms/step - accuracy: 0.8673 - loss: 0.4506 - val_accuracy: 0.9580 - val_loss: 0.1437\n",
       "Epoch 2/10\n",
-      "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m16s\u001b[0m 17ms/step - accuracy: 0.9522 - loss: 0.1604 - val_accuracy: 0.9617 - val_loss: 0.1227\n",
+      "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 10ms/step - accuracy: 0.9588 - loss: 0.1382 - val_accuracy: 0.9710 - val_loss: 0.0926\n",
       "Epoch 3/10\n",
-      "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 12ms/step - accuracy: 0.9675 - loss: 0.1052 - val_accuracy: 0.9743 - val_loss: 0.0841\n",
+      "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 11ms/step - accuracy: 0.9717 - loss: 0.0961 - val_accuracy: 0.9766 - val_loss: 0.0796\n",
       "Epoch 4/10\n",
-      "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m15s\u001b[0m 16ms/step - accuracy: 0.9743 - loss: 0.0826 - val_accuracy: 0.9797 - val_loss: 0.0660\n",
+      "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 11ms/step - accuracy: 0.9763 - loss: 0.0786 - val_accuracy: 0.9775 - val_loss: 0.0748\n",
       "Epoch 5/10\n",
-      "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 13ms/step - accuracy: 0.9782 - loss: 0.0709 - val_accuracy: 0.9789 - val_loss: 0.0686\n",
+      "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 12ms/step - accuracy: 0.9780 - loss: 0.0703 - val_accuracy: 0.9829 - val_loss: 0.0547\n",
       "Epoch 6/10\n",
-      "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m21s\u001b[0m 14ms/step - accuracy: 0.9827 - loss: 0.0577 - val_accuracy: 0.9792 - val_loss: 0.0669\n",
+      "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 12ms/step - accuracy: 0.9816 - loss: 0.0609 - val_accuracy: 0.9836 - val_loss: 0.0528\n",
       "Epoch 7/10\n",
-      "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m15s\u001b[0m 16ms/step - accuracy: 0.9820 - loss: 0.0559 - val_accuracy: 0.9822 - val_loss: 0.0559\n",
+      "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 12ms/step - accuracy: 0.9836 - loss: 0.0540 - val_accuracy: 0.9821 - val_loss: 0.0542\n",
       "Epoch 8/10\n",
-      "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m14s\u001b[0m 14ms/step - accuracy: 0.9842 - loss: 0.0527 - val_accuracy: 0.9824 - val_loss: 0.0554\n",
+      "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 11ms/step - accuracy: 0.9845 - loss: 0.0519 - val_accuracy: 0.9819 - val_loss: 0.0539\n",
       "Epoch 9/10\n",
-      "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 13ms/step - accuracy: 0.9862 - loss: 0.0452 - val_accuracy: 0.9809 - val_loss: 0.0570\n",
+      "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 12ms/step - accuracy: 0.9839 - loss: 0.0496 - val_accuracy: 0.9847 - val_loss: 0.0493\n",
       "Epoch 10/10\n",
-      "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 12ms/step - accuracy: 0.9847 - loss: 0.0488 - val_accuracy: 0.9819 - val_loss: 0.0560\n"
+      "\u001b[1m938/938\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 12ms/step - accuracy: 0.9844 - loss: 0.0490 - val_accuracy: 0.9836 - val_loss: 0.0547\n"
      ]
     }
    ],
@@ -161,14 +162,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 5ms/step - accuracy: 0.9772 - loss: 0.0673\n"
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 4ms/step - accuracy: 0.9808 - loss: 0.0641\n"
      ]
     }
    ],
@@ -179,14 +180,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test accuracy: 0.9818999767303467\n"
+      "Test accuracy: 0.9836000204086304\n"
      ]
     }
    ],
@@ -212,17 +213,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading data from https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\n",
+      "\u001b[1m170498071/170498071\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m15s\u001b[0m 0us/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "(x_train, y_train), (x_test, y_test) = cifar10.load_data()\n",
+    "\n",
+    "x_train = x_train.astype('float32') / 255.0\n",
+    "x_test = x_test.astype('float32') / 255.0\n",
+    "\n",
+    "y_train = to_categorical(y_train, 10)\n",
+    "y_test = to_categorical(y_test, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def create_alexnet_model(input_shape, num_classes):\n",
+    "    model = models.Sequential()\n",
+    "    \n",
+    "    model.add(layers.Conv2D(96, (11, 11), strides=(4, 4), padding='same', input_shape=input_shape, activation='relu'))\n",
+    "    model.add(layers.BatchNormalization())\n",
+    "    model.add(layers.MaxPooling2D(pool_size=(3, 3), strides=(2, 2), padding='same'))\n",
+    "    \n",
+    "    model.add(layers.Conv2D(256, (5, 5), strides=(1, 1), padding='same', activation='relu'))\n",
+    "    model.add(layers.BatchNormalization())\n",
+    "    model.add(layers.MaxPooling2D(pool_size=(3, 3), strides=(2, 2), padding='same'))\n",
+    "    \n",
+    "    model.add(layers.Conv2D(384, (3, 3), strides=(1, 1), padding='same', activation='relu'))\n",
+    "    model.add(layers.BatchNormalization())\n",
+    "    \n",
+    "    model.add(layers.Conv2D(384, (3, 3), strides=(1, 1), padding='same', activation='relu'))\n",
+    "    model.add(layers.BatchNormalization())\n",
+    "    \n",
+    "    model.add(layers.Conv2D(256, (3, 3), strides=(1, 1), padding='same', activation='relu'))\n",
+    "    model.add(layers.BatchNormalization())\n",
+    "    model.add(layers.MaxPooling2D(pool_size=(3, 3), strides=(2, 2), padding='same'))\n",
+    "    \n",
+    "    model.add(layers.Flatten())\n",
+    "    \n",
+    "    model.add(layers.Dense(4096, activation='relu'))\n",
+    "    model.add(layers.Dropout(0.5))\n",
+    "    \n",
+    "    model.add(layers.Dense(4096, activation='relu'))\n",
+    "    model.add(layers.Dropout(0.5))\n",
+    "    \n",
+    "    model.add(layers.Dense(num_classes, activation='softmax'))\n",
+    "    \n",
+    "    return model\n",
+    "\n",
+    "input_shape = (32, 32, 3)\n",
+    "num_classes = 10\n",
+    "model = create_alexnet_model(input_shape, num_classes)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m297s\u001b[0m 380ms/step - accuracy: 0.6644 - loss: 0.9797 - val_accuracy: 0.5412 - val_loss: 1.3542\n",
+      "Epoch 2/10\n",
+      "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m313s\u001b[0m 368ms/step - accuracy: 0.6893 - loss: 0.9015 - val_accuracy: 0.6055 - val_loss: 1.1624\n",
+      "Epoch 3/10\n",
+      "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m314s\u001b[0m 401ms/step - accuracy: 0.7112 - loss: 0.8586 - val_accuracy: 0.6108 - val_loss: 1.1784\n",
+      "Epoch 4/10\n",
+      "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m317s\u001b[0m 405ms/step - accuracy: 0.7335 - loss: 0.7926 - val_accuracy: 0.6250 - val_loss: 1.1413\n",
+      "Epoch 5/10\n",
+      "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m321s\u001b[0m 411ms/step - accuracy: 0.7561 - loss: 0.7236 - val_accuracy: 0.6225 - val_loss: 1.1448\n",
+      "Epoch 6/10\n",
+      "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m318s\u001b[0m 407ms/step - accuracy: 0.7745 - loss: 0.6690 - val_accuracy: 0.6338 - val_loss: 1.1512\n",
+      "Epoch 7/10\n",
+      "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m298s\u001b[0m 381ms/step - accuracy: 0.8003 - loss: 0.5931 - val_accuracy: 0.6474 - val_loss: 1.0916\n",
+      "Epoch 8/10\n",
+      "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m301s\u001b[0m 385ms/step - accuracy: 0.8059 - loss: 0.5724 - val_accuracy: 0.6158 - val_loss: 1.2939\n",
+      "Epoch 9/10\n",
+      "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m317s\u001b[0m 405ms/step - accuracy: 0.8382 - loss: 0.4817 - val_accuracy: 0.6418 - val_loss: 1.2856\n",
+      "Epoch 10/10\n",
+      "\u001b[1m782/782\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m310s\u001b[0m 397ms/step - accuracy: 0.8511 - loss: 0.4455 - val_accuracy: 0.6573 - val_loss: 1.2301\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.history.History at 0x19c7883a720>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(x_train, y_train, epochs=10, batch_size=64, validation_data=(x_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m8s\u001b[0m 24ms/step - accuracy: 0.6620 - loss: 1.2014\n",
+      "Test accuracy: 0.6572999954223633\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_loss, test_acc = model.evaluate(x_test, y_test)\n",
+    "print(f'Test accuracy: {test_acc}')"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Justificación de Métrica de Desempeño seleccionada\n",
-    "* Lorem Ipsum"
+    "\n",
+    "* **Precisión (Accuracy)**: La métrica seleccionada para evaluar el desempeño del modelo es la precisión. La precisión mide el porcentaje de predicciones correctas sobre el total de ejemplos. En el contexto del dataset CIFAR-10, estamos clasificando imágenes en 10 clases diferentes (por ejemplo, aviones, automóviles, pájaros, etc.), por lo que la precisión nos indicará qué tan bien el modelo clasifica correctamente cada imagen en la clase correspondiente.\n",
+    "\n",
+    "* **Resultados Obtenidos**: Nuestro modelo AlexNet entrenado sobre el dataset CIFAR-10 alcanzó una precisión de prueba del 65.73%. Esto indica que el modelo es capaz de clasificar correctamente aproximadamente el 65.73% de las imágenes en el conjunto de prueba. Aunque hay margen para mejorar, esta precisión refleja la capacidad del modelo para manejar la complejidad y variabilidad de las imágenes en CIFAR-10.\n",
+    "\n",
+    "* **Consideraciones Adicionales**: Si el conjunto de datos estuviera desbalanceado o si algunas clases fueran más importantes que otras, podríamos considerar otras métricas como la precisión ponderada, la F1-score, o la matriz de confusión para obtener una evaluación más detallada del rendimiento del modelo en cada clase específica."
    ]
   },
   {
@@ -327,7 +468,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -341,7 +482,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
