--- a/lab09.ipynb
+++ b/lab09.ipynb
@@ -396,7 +396,7 @@
    "source": [
     "#### c. Indique claramente qué le pareció más interesante de cada arquitectura\n",
     "* **LeNet-5**: Lo más interesante es su simplicidad y eficacia para problemas de clasificación de imágenes pequeñas y de baja complejidad, como los dígitos escritos a mano. Al investigar se encontró que fue una arquitectura pionera en el uso de redes convolucionales, mostrando cómo las capas convolucionales y de pooling podían reducir la dimensionalidad y captar características relevantes para tareas de clasificación.\n",
-    "* **AlexNet**:"
+    "* **AlexNet**: La manera en la que emplea capas convolucionales con filtros grandes al inicio y pequeños al final, junto con normalización por lotes para estabilizar el entrenamiento es sumamente interesante. Esto ya que las capas densas de 4096 neuronas permiten capturar características complejas, mejorando el rendimiento en clasificación de imágenes."
    ]
   },
   {
@@ -468,9 +468,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "myenv",
    "language": "python",
-   "name": "python3"
+   "name": "myenv"
   },
   "language_info": {
    "codemirror_mode": {
@@ -482,7 +482,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
